Registration works (Loging after registration too), changes in registration form look

--- a/src/main/resources/templates/loginPage/login.html
+++ b/src/main/resources/templates/loginPage/login.html
@@ -61,12 +61,12 @@
                 <button type="submit" class="btn btn-primary btn-round btn-lg btn-block">Sign In</button>
                 <div class="pull-left">
                   <h6>
-                    <a href="#pablo" class="link">Create Account</a>
+                    <a th:href="@{/registration}" class="link">Create Account</a>
                   </h6>
                 </div>
                 <div class="pull-right">
                   <h6>
-                    <a href="#pablo" class="link">Need Help?</a>
+                    <a th:href="@{/}" class="link">Home Page</a>
                   </h6>
                 </div>
               </div>
