--- a/src/main/resources/templates/loginPage/login.html
+++ b/src/main/resources/templates/loginPage/login.html
@@ -51,7 +51,7 @@
                 <div class="input-group no-border input-lg">
                   <div class="input-group-prepend">
                     <span class="input-group-text">
-                      <i class="now-ui-icons text_caps-small"></i>
+                      <i class="now-ui-icons ui-1_lock-circle-open"></i>
                     </span>
                   </div>
                   <input type="text" placeholder="Password..." name="password" id="password" th:field="*{password}" class="form-control" />
