--- a/src/main/resources/templates/loginPage/login.html
+++ b/src/main/resources/templates/loginPage/login.html
@@ -54,7 +54,7 @@
                       <i class="now-ui-icons ui-1_lock-circle-open"></i>
                     </span>
                   </div>
-                  <input type="text" placeholder="Password..." name="password" id="password" th:field="*{password}" class="form-control" />
+                  <input type="password" placeholder="Password..." name="password" id="password" th:field="*{password}" class="form-control" />
                 </div>
               </div>
               <div class="card-footer text-center">
