--- a/src/main/resources/templates/dashboardPages/dashboard.html
+++ b/src/main/resources/templates/dashboardPages/dashboard.html
@@ -4,8 +4,106 @@
 <head th:include="/dashboardPages/Userheader :: head"></head>
 
 <body>
-<span th:replace="/dashboardPages/Userheader :: header"></span>
-  <span></span>
+<div class="wrapper">
+    <div class="sidebar" data-color="orange">
+        <!--
+          Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
+      -->
+        <div class="logo">
+            <a th:href="@{/dashboard/user/home}" class="simple-text logo-normal" style="text-align: center">
+                Car Workshop Manager
+            </a>
+        </div>
+        <div class="sidebar-wrapper" id="sidebar-wrapper">
+            <ul class="nav">
+                <li class="active ">
+                    <a th:href="@{/dashboard/user/home}">
+                        <i class="now-ui-icons design_app"></i>
+                        <p>Dashboard</p>
+                    </a>
+                </li>
+                <li>
+                    <a th:href="@{/dashboard/user/visits}">
+                        <i class="now-ui-icons education_atom"></i>
+                        <p>Visits</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="./map.html">
+                        <i class="now-ui-icons location_map-big"></i>
+                        <p>Maps</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="./notifications.html">
+                        <i class="now-ui-icons ui-1_bell-53"></i>
+                        <p>Notifications</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="./user.html">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>User Profile</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="./tables.html">
+                        <i class="now-ui-icons design_bullet-list-67"></i>
+                        <p>Table List</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="./typography.html">
+                        <i class="now-ui-icons text_caps-small"></i>
+                        <p>Typography</p>
+                    </a>
+                </li>
+                <li class="active-pro">
+                    <a href="./upgrade.html">
+                        <i class="now-ui-icons arrows-1_cloud-download-93"></i>
+                        <p>Upgrade to PRO</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-panel" id="main-panel">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-transparent  bg-primary  navbar-absolute">
+            <div class="container-fluid">
+                <div class="navbar-wrapper">
+                    <div class="navbar-toggle">
+                        <button type="button" class="navbar-toggler">
+                            <span class="navbar-toggler-bar bar1"></span>
+                            <span class="navbar-toggler-bar bar2"></span>
+                            <span class="navbar-toggler-bar bar3"></span>
+                        </button>
+                    </div>
+                    <a class="navbar-brand" th:href="@{/dashboard/user/home}">Dashboard</a>
+                </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-bar navbar-kebab"></span>
+                    <span class="navbar-toggler-bar navbar-kebab"></span>
+                    <span class="navbar-toggler-bar navbar-kebab"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navigation">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="now-ui-icons users_single-02"></i>
+                                <p>
+                                    <span class="d-lg-none d-md-block">Account</span>
+                                </p>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" th:href="@{/logout}">Log Out</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
       <!-- End Navbar -->
       <div class="panel-header">
         <h1 th:text="'Car Workshop Manager'" style="text-align: center; color: white"></h1>
