--- a/src/main/resources/templates/dashboardPages/visitDetails.html
+++ b/src/main/resources/templates/dashboardPages/visitDetails.html
@@ -121,13 +121,16 @@
                           <h5 class="title">Visit Details</h5>
                       </div>
                       <div class="card-body">
-                          <form th:action="@{/appointmentDetails}" method="POST">
+                          <form th:action="@{/dashboard/user/visits/details}" method="POST">
                               <div class="row" style="justify-content: center">
                                   <h6 class="subTitle" style="text-align: center">Visit</h6>
                               </div>
                               <div class="row" style="justify-content: space-between">
                                   <div class="col-md-3 pr-1">
                                       <div class="form-group" style="text-align: center">
+                                          <input type="hidden" th:value="${selectedVisit.getId()}" name="selectedVisitId" id="selectedVisitId">
+                                          <input type="hidden" th:value="${selectedVisit.getVisitDate().getId()}" name="visitDateId" id="visitDateId">
+                                          <input type="hidden" th:value="${selectedVisit.getCar().getId()}" name="carId" id="carId">
                                           <label>Date</label>
                                           <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getVisitDate().getDate()}" style="text-align: center">
                                       </div>
@@ -141,7 +144,7 @@
                                   <div class="col-md-3 pl-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>Status</label>
-                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getStatus()}" style="text-align: center">
+                                          <input type="text" class="form-control" disabled="" th:field="*{selectedVisit.status}" th:value="${selectedVisit.getStatus()}" style="text-align: center">
                                       </div>
                                   </div>
                               </div>
@@ -193,37 +196,37 @@
                                   <div class="col-md-2 pr-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>Estimated Fixing Time</label>
-                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getEstimatedExecutionTime()}" style="text-align: center">
+                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getEstimatedExecutionTime()}" name="estimatedExecutionTime" id="estimatedExecutionTime" style="text-align: center">
                                       </div>
                                   </div>
                                   <div class="col-md-2 px-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>Estimated Work Cost</label>
-                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getEstimatedWorkCost()}" style="text-align: center">
+                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getEstimatedWorkCost()}" name="estimatedWorkCost" id="estimatedWorkCost" style="text-align: center">
                                       </div>
                                   </div>
                                   <div class="col-md-2 px-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>Working Hours</label>
-                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getWorkingHours()}" style="text-align: center">
+                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getWorkingHours()}" name="workingHours" id="workingHours" style="text-align: center">
                                       </div>
                                   </div>
                                   <div class="col-md-2 px-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>Work Cost</label>
-                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getWorkCost()}" style="text-align: center">
+                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getWorkCost()}" name="workCost" id="workCost" style="text-align: center">
                                       </div>
                                   </div>
                                   <div class="col-md-2 px-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>Parts Cost</label>
-                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getPartsCost()}" style="text-align: center">
+                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getPartsCost()}" name="partsCost" id="partsCost" style="text-align: center">
                                       </div>
                                   </div>
                                   <div class="col-md-2 pl-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>Final Cost</label>
-                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getFinalCost()}" style="text-align: center">
+                                          <input type="text" class="form-control" disabled="" th:value="${selectedVisit.getFinalCost()}" name="finalCost" id="finalCost" style="text-align: center">
                                       </div>
                                   </div>
                               </div>
@@ -234,13 +237,13 @@
                                   <div class="col-md-6 pr-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>More Informations</label>
-                                          <textarea rows="4" cols="80" disabled="" class="form-control" placeholder="None"  th:value="${selectedVisit.getMoreInformation()}"></textarea>
+                                          <textarea rows="4" cols="80" disabled="" class="form-control" placeholder="None" th:text="${selectedVisit.getMoreInformation()}" name="moreInformation" id="moreInformation"></textarea>
                                       </div>
                                   </div>
                                   <div class="col-md-6 pl-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>Comment</label>
-                                          <textarea rows="4" cols="80" class="form-control" placeholder="This You can write comment..." th:field="*{selectedVisit.comment}"></textarea>
+                                          <textarea rows="4" cols="80" class="form-control" placeholder="This You can write comment..." th:text="${selectedVisit.getComment()}" name="wroteComment" id="wroteComment"></textarea>
                                       </div>
                                   </div>
                               </div>
