Small changes in visit details form; Added information after successfully saved changes

--- a/src/main/resources/templates/dashboardPages/visits.html
+++ b/src/main/resources/templates/dashboardPages/visits.html
@@ -157,7 +157,7 @@
                                       ${order.getVisitDate().getWorkshop().getNumber()}"></td>
                                       <td th:text="${order.getFinalCost()}"></td>
                                       <td class="text-center">
-                                          <a th:href="@{/dashboard/user/visits/view(id=${order.getId()})}" class="btn btn-primary">View</a>
+                                          <a th:href="@{/dashboard/user/visits/details(id=${order.getId()})}" class="btn btn-primary">Details</a>
                                           <a th:href="@{/dashboard/user/visits/delete(id=${order.getId()})}" class="btn btn-danger">Delete</a>
                                       </td>
                                   </tr>
