--- a/src/main/resources/templates/dashboardPages/visitDetails.html
+++ b/src/main/resources/templates/dashboardPages/visitDetails.html
@@ -125,6 +125,9 @@
                               <div class="row" style="justify-content: center">
                                   <h6 class="subTitle" style="text-align: center">Visit</h6>
                               </div>
+                              <div th:if="${param.success}">
+                                  <div class="alert alert-success" style="text-align: center">Changes successfully saved!</div>
+                              </div>
                               <div class="row" style="justify-content: space-between">
                                   <div class="col-md-3 pr-1">
                                       <div class="form-group" style="text-align: center">
