--- a/src/main/resources/templates/dashboardPages/dashboard.html
+++ b/src/main/resources/templates/dashboardPages/dashboard.html
@@ -16,7 +16,7 @@
         </div>
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
-                <li class="active ">
+                <li class="active">
                     <a th:href="@{/dashboard/user/home}">
                         <i class="now-ui-icons design_app"></i>
                         <p>Dashboard</p>
@@ -29,9 +29,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./map.html">
-                        <i class="now-ui-icons location_map-big"></i>
-                        <p>Maps</p>
+                    <a th:href="@{/dashboard/user/profile}">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>User Profile</p>
                     </a>
                 </li>
                 <li>
@@ -40,12 +40,7 @@
                         <p>Notifications</p>
                     </a>
                 </li>
-                <li>
-                    <a href="./user.html">
-                        <i class="now-ui-icons users_single-02"></i>
-                        <p>User Profile</p>
-                    </a>
-                </li>
+
                 <li>
                     <a href="./tables.html">
                         <i class="now-ui-icons design_bullet-list-67"></i>
@@ -96,7 +91,7 @@
                                 </p>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" th:href="@{/dashboard/user/profile}">Profile</a>
                                 <a class="dropdown-item" th:href="@{/logout}">Log Out</a>
                             </div>
                         </li>
