--- a/src/main/resources/templates/dashboardPages/userheader.html
+++ b/src/main/resources/templates/dashboardPages/userheader.html
@@ -106,7 +106,7 @@
                                 </p>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" th:href="@{/dashboard/user/profile}">Profile</a>
                                 <a class="dropdown-item" href="#">Log Out</a>
                             </div>
                         </li>
