--- a/src/main/resources/templates/dashboardPages/visitDetails.html
+++ b/src/main/resources/templates/dashboardPages/visitDetails.html
@@ -66,7 +66,54 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div><div class="sidebar-wrapper" id="sidebar-wrapper">
+    <ul class="nav">
+        <li>
+            <a th:href="@{/dashboard/user/home}">
+                <i class="now-ui-icons design_app"></i>
+                <p>Dashboard</p>
+            </a>
+        </li>
+        <li>
+            <a th:href="@{/dashboard/user/visits}">
+                <i class="now-ui-icons education_atom"></i>
+                <p>Visits</p>
+            </a>
+        </li>
+        <li>
+            <a th:href="@{/dashboard/user/profile}">
+                <i class="now-ui-icons users_single-02"></i>
+                <p>User Profile</p>
+            </a>
+        </li>
+        <li>
+            <a href="./notifications.html">
+                <i class="now-ui-icons ui-1_bell-53"></i>
+                <p>Notifications</p>
+            </a>
+        </li>
+
+        <li>
+            <a href="./tables.html">
+                <i class="now-ui-icons design_bullet-list-67"></i>
+                <p>Table List</p>
+            </a>
+        </li>
+        <li>
+            <a href="./typography.html">
+                <i class="now-ui-icons text_caps-small"></i>
+                <p>Typography</p>
+            </a>
+        </li>
+        <li class="active-pro">
+            <a href="./upgrade.html">
+                <i class="now-ui-icons arrows-1_cloud-download-93"></i>
+                <p>Upgrade to PRO</p>
+            </a>
+        </li>
+    </ul>
+</div>
+</div>
     <div class="main-panel" id="main-panel">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-transparent  bg-primary  navbar-absolute">
@@ -96,7 +143,7 @@
                                 </p>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" th:href="@{/dashboard/user/profile}"">Profile</a>
                                 <a class="dropdown-item" th:href="@{/logout}">Log Out</a>
                             </div>
                         </li>
@@ -108,7 +155,6 @@
       <div class="panel-header">
         <h1 th:text="'Car Workshop Manager'" style="text-align: center; color: white"></h1>
           <br>
-          <h2 th:text="'Selected Visit'" style="text-align: center; color: white"></h2>
       </div>
       <div class="content" style="background: -webkit-gradient(linear, left top, right top, from(#0c2646), color-stop(60%, #204065), to(#2a5788));">
           <div class="row">
