--- a/src/main/resources/templates/dashboardPages/visitDetails.html
+++ b/src/main/resources/templates/dashboardPages/visitDetails.html
@@ -14,59 +14,7 @@
                 Car Workshop Manager
             </a>
         </div>
-        <div class="sidebar-wrapper" id="sidebar-wrapper">
-            <ul class="nav">
-                <li>
-                    <a th:href="@{/dashboard/user/home}">
-                        <i class="now-ui-icons design_app"></i>
-                        <p>Dashboard</p>
-                    </a>
-                </li>
-                <li class="active">
-                    <a th:href="@{/dashboard/user/visits}">
-                        <i class="now-ui-icons education_atom"></i>
-                        <p>Visits</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./map.html">
-                        <i class="now-ui-icons location_map-big"></i>
-                        <p>Maps</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./notifications.html">
-                        <i class="now-ui-icons ui-1_bell-53"></i>
-                        <p>Notifications</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./user.html">
-                        <i class="now-ui-icons users_single-02"></i>
-                        <p>User Profile</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./tables.html">
-                        <i class="now-ui-icons design_bullet-list-67"></i>
-                        <p>Table List</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./typography.html">
-                        <i class="now-ui-icons text_caps-small"></i>
-                        <p>Typography</p>
-                    </a>
-                </li>
-                <li class="active-pro">
-                    <a href="./upgrade.html">
-                        <i class="now-ui-icons arrows-1_cloud-download-93"></i>
-                        <p>Upgrade to PRO</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div><div class="sidebar-wrapper" id="sidebar-wrapper">
+    <div class="sidebar-wrapper" id="sidebar-wrapper">
     <ul class="nav">
         <li>
             <a th:href="@{/dashboard/user/home}">
@@ -74,7 +22,7 @@
                 <p>Dashboard</p>
             </a>
         </li>
-        <li>
+        <li class="active">
             <a th:href="@{/dashboard/user/visits}">
                 <i class="now-ui-icons education_atom"></i>
                 <p>Visits</p>
@@ -143,7 +91,7 @@
                                 </p>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" th:href="@{/dashboard/user/profile}"">Profile</a>
+                                <a class="dropdown-item" th:href="@{/dashboard/user/profile}">Profile</a>
                                 <a class="dropdown-item" th:href="@{/logout}">Log Out</a>
                             </div>
                         </li>
