--- a/src/main/resources/templates/dashboardPages/visitDetails.html
+++ b/src/main/resources/templates/dashboardPages/visitDetails.html
@@ -35,9 +35,9 @@
             </a>
         </li>
         <li>
-            <a href="./notifications.html">
+            <a th:href="@{/dashboard/user/cars}">
                 <i class="now-ui-icons ui-1_bell-53"></i>
-                <p>Notifications</p>
+                <p>Cars</p>
             </a>
         </li>
 
