--- a/src/main/resources/templates/dashboardPages/dashboard.html
+++ b/src/main/resources/templates/dashboardPages/dashboard.html
@@ -35,9 +35,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./notifications.html">
+                    <a th:href="@{/dashboard/user/cars}">
                         <i class="now-ui-icons ui-1_bell-53"></i>
-                        <p>Notifications</p>
+                        <p>Cars</p>
                     </a>
                 </li>
 
@@ -118,7 +118,7 @@
                       <div class="card-body">
                           <div class="table-responsive">
                               <table class="table">
-                                  <thead class=" text-primary">
+                                  <thead class=" text-primary" style="text-align: center">
                                   <th>
                                       No.
                                   </th>
@@ -142,7 +142,7 @@
                                   </th>
                                   </thead>
                                   <tbody>
-                                  <tr th:each="order, state : ${userOrderList}">
+                                  <tr th:each="order, state : ${userOrderList}" class="text-center">
                                       <td th:text="${state.count}"></td>
                                       <td th:text="${order.getVisitDate().getDate()}"></td>
                                       <td th:text="${order.getVisitDate().getTime()}"></td>
