Chart (Chart.js) in user dashboard works

--- a/src/main/resources/templates/dashboardPages/userheader.html
+++ b/src/main/resources/templates/dashboardPages/userheader.html
@@ -12,6 +12,7 @@
         <!-- CSS Files -->
         <link rel="stylesheet" type="text/css" th:href="@{/css/dashboard/bootstrap.min.css}" />
         <link rel="stylesheet" type="text/css" th:href="@{/css/dashboard/now-ui-dashboard.css}" />
+        <script type="text/javascript" th:src="@{/js/dashboard/chartjs.min.js}"></script>
 </head>
 <body>
 <div class="wrapper" th:fragment="header">
