--- a/src/main/resources/templates/dashboardPages/dashboard.html
+++ b/src/main/resources/templates/dashboardPages/dashboard.html
@@ -164,6 +164,121 @@
               </div>
           </div>
         <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="card card-chart">
+                    <div class="card-header">
+                        <h5 class="card-category">2018 Sales</h5>
+                        <h4 class="card-title">All products</h4>
+                        <div class="dropdown">
+                            <button type="button" class="btn btn-round btn-outline-default dropdown-toggle btn-simple btn-icon no-caret" data-toggle="dropdown">
+                                <i class="now-ui-icons loader_gear"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                                <a class="dropdown-item text-danger" href="#">Remove Data</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="chart-area">
+                            <canvas id="exampleChart"></canvas>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="stats">
+                            <i class="now-ui-icons arrows-1_refresh-69"></i> Just Updated
+                        </div>
+                    </div>
+                    <script th:inline="javascript">
+                        /*<![CDATA[*/
+                        chartColor = "#FFFFFF";
+
+                        // General configuration for the charts with Line gradientStroke
+                        gradientChartOptionsConfiguration = {
+                            maintainAspectRatio: false,
+                            legend: {
+                                display: false
+                            },
+                            tooltips: {
+                                bodySpacing: 4,
+                                mode:"nearest",
+                                intersect: 0,
+                                position:"nearest",
+                                xPadding:10,
+                                yPadding:10,
+                                caretPadding:10
+                            },
+                            responsive: 1,
+                            scales: {
+                                yAxes: [{
+                                    display:0,
+                                    gridLines:0,
+                                    ticks: {
+                                        display: false
+                                    },
+                                    gridLines: {
+                                        zeroLineColor: "transparent",
+                                        drawTicks: false,
+                                        display: false,
+                                        drawBorder: false
+                                    }
+                                }],
+                                xAxes: [{
+                                    display:0,
+                                    gridLines:0,
+                                    ticks: {
+                                        display: false
+                                    },
+                                    gridLines: {
+                                        zeroLineColor: "transparent",
+                                        drawTicks: false,
+                                        display: false,
+                                        drawBorder: false
+                                    }
+                                }]
+                            },
+                            layout:{
+                                padding:{left:0,right:0,top:15,bottom:15}
+                            }
+                        };
+                        var htmldata = [[${data}]];
+                        ctx = document.getElementById('exampleChart').getContext("2d");
+
+                        gradientStroke = ctx.createLinearGradient(500, 0, 100, 0);
+                        gradientStroke.addColorStop(0, '#80b6f4');
+                        gradientStroke.addColorStop(1, chartColor);
+
+                        gradientFill = ctx.createLinearGradient(0, 170, 0, 50);
+                        gradientFill.addColorStop(0, "rgba(128, 182, 244, 0)");
+                        gradientFill.addColorStop(1, "rgba(249, 99, 59, 0.40)");
+
+                        exampleChart = new Chart(ctx, {
+                            type: 'line',
+                            data: {
+                                labels: Object.keys(htmldata),
+                                datasets: [{
+                                    label: "Active Users",
+                                    borderColor: "#f96332",
+                                    pointBorderColor: "#FFF",
+                                    pointBackgroundColor: "#f96332",
+                                    pointBorderWidth: 2,
+                                    pointHoverRadius: 4,
+                                    pointHoverBorderWidth: 1,
+                                    pointRadius: 4,
+                                    fill: true,
+                                    backgroundColor: gradientFill,
+                                    borderWidth: 2,
+                                    data: Object.keys(htmldata).map(function(key) {return htmldata[key];})
+                                }]
+                            },
+                            options: gradientChartOptionsConfiguration
+                        });
+                        /*]]>*/
+                    </script>
+                </div>
+            </div>
         </div>
       </div>
       <span th:replace="/dashboardPages/userfooter :: footer"></span>
