Added day, month and year field to VisitDate entity

--- a/src/main/resources/templates/dashboardPages/dashboard.html
+++ b/src/main/resources/templates/dashboardPages/dashboard.html
@@ -259,7 +259,7 @@
                             data: {
                                 labels: Object.keys(htmldata),
                                 datasets: [{
-                                    label: "Active Users",
+                                    label: "Visits",
                                     borderColor: "#f96332",
                                     pointBorderColor: "#FFF",
                                     pointBackgroundColor: "#f96332",
