Added confirmation Delete Last Visit view; Added delete cascade in forgein key visitDate -> order; Delete last visit works!

--- a/src/main/resources/static/css/dashboard/now-ui-dashboard.css
+++ b/src/main/resources/static/css/dashboard/now-ui-dashboard.css
@@ -1730,7 +1730,7 @@ fieldset[disabled] .btn-link.active {
 .form-control[readonly],
 fieldset[disabled] .form-control {
   background-color: #E3E3E3;
-  color: #888;
+  color: black;
   cursor: not-allowed;
 }
 
