--- a/src/main/resources/templates/dashboardPages/confirmationDeleteLastVisit.html
+++ b/src/main/resources/templates/dashboardPages/confirmationDeleteLastVisit.html
@@ -108,27 +108,24 @@
           <div class="row">
               <br>
           </div>
-          <div class="row">
-              <div class="col-md-12">
+          <div class="row" style="justify-content: center">
+              <div class="col-md-6">
                   <div class="card">
-                      <div class="card-header">
-                          <h5 class="title">Confirmation</h5>
-                      </div>
                       <div class="card-body">
                           <form th:action="@{/dashboard/user/lastVisits/delete}" method="POST">
                               <div class="row" style="justify-content: center">
-                                  <h6 class="subTitle" style="text-align: center">Visit</h6>
+                                  <h5 class="title" style="text-align: center">Confirmation</h5>
                               </div>
-                              <div class="row" style="justify-content: space-between">
-                                  <div class="col-md-3 pr-1">
-                                      <div class="form-group" style="text-align: center">
+                              <div class="row" style="justify-content: center">
+                                  <div class="col-md-6">
+                                      <div class="form-group">
                                           <h4>Do You want to delete visit?</h4>
                                       </div>
                                   </div>
                               </div>
-                              <div class="row" style="justify-content: flex-end">
-                                  <button style="margin-right: 15px" type="submit" class="btn btn-warning">Yes</button>
-                                  <a style="margin-right: 15px" type="button" th:href="@{/dashboard/user/home}" class="btn btn-primary">No</a>
+                              <div class="row" style="justify-content: space-between">
+                                  <button style="margin-left: 30px" type="submit" class="btn btn-danger">Yes</button>
+                                  <a style="margin-right: 30px" type="button" th:href="@{/dashboard/user/home}" class="btn btn-info">No</a>
                               </div>
                               <input type="hidden" th:value="${id}" id="id" name="id">
                           </form>
