--- a/src/main/resources/templates/dashboardPages/visits.html
+++ b/src/main/resources/templates/dashboardPages/visits.html
@@ -114,6 +114,9 @@
                       <div class="card-header">
                           <h4 class="card-title">Visits</h4>
                       </div>
+                      <div th:if="${param.visitDeleteSuccess}">
+                          <div class="alert alert-success" style="text-align: center">Visit successfully deleted!</div>
+                      </div>
                       <div class="card-body">
                           <div class="table-responsive">
                               <table class="table">
