--- a/src/main/resources/templates/dashboardPages/admin/confirmationDeleteVisit.html
+++ b/src/main/resources/templates/dashboardPages/admin/confirmationDeleteVisit.html
@@ -35,9 +35,9 @@
             </a>
         </li>
         <li>
-            <a th:href="@{/dashboard/admin/cars}">
+            <a th:href="@{/dashboard/admin/users}">
                 <i class="now-ui-icons ui-1_bell-53"></i>
-                <p>Cars</p>
+                <p>Users</p>
             </a>
         </li>
 
