Small changes in user car edit view in admin dashobard

--- a/src/main/resources/templates/dashboardPages/admin/adminfooter.html
+++ b/src/main/resources/templates/dashboardPages/admin/adminfooter.html
@@ -13,6 +13,7 @@
 <script th:src="@{/js/dashboard/jquery.min.js}"></script>
 <script th:src="@{/js/dashboard/popper.min.js}"></script>
 <script th:src="@{/js/dashboard/bootstrap.min.js}"></script>
+<script th:src="@{/js/dashboard/bootstrap-selectpicker.js}"></script>
 <script th:src="@{/js/dashboard/perfect-scrollbar.jquery.min.js}"></script>
 <script th:src="@{/js/dashboard/bootstrap-notify.js}"></script>
 </span>
