--- a/src/main/resources/templates/dashboardPages/admin/adminheader.html
+++ b/src/main/resources/templates/dashboardPages/admin/adminheader.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <!-- CSS Files -->
         <link rel="stylesheet" type="text/css" th:href="@{/css/dashboard/bootstrap.min.css}" />
-        <link rel="stylesheet" type="text/css" th:href="@{/css/dashboard/now-ui-dashboard.css}" />
+        <link rel="stylesheet" type="text/css" th:href="@{/css/dashboard/now-ui-dashboard.min.css}" />
         <script type="text/javascript" th:src="@{/js/dashboard/chartjs.min.js}"></script>
 </head>
 <body>
