Small changes visual selectpicker; Added findAllRoles querry to role repositroy, service and serviceImpl

--- a/src/main/resources/templates/dashboardPages/admin/userEdit.html
+++ b/src/main/resources/templates/dashboardPages/admin/userEdit.html
@@ -157,7 +157,7 @@
                     <div class="form-group" style="text-align: center">
                       <label>Role</label>
                       <div class="dropdown bootstrap-select show-tick">
-                        <select name="car" id="car" class="selectpicker" data-style="btn btn-white btn-round btn-block" title="Choose Car" >
+                        <select name="role" id="role" class="selectpicker" data-style="btn btn-white btn-round btn-block" title="Choose Car" >
                           <option>Option 1</option>
                         </select>
                       </div>
